--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
-<html lang="zh-CN" data-theme="dark">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>二次元导航 | Anime Nav</title>
+    <title>二次元导航站</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1 class="neon-text">𝓐𝓷𝓲𝓶𝓮 𝓝𝓪𝓿</h1>
-            <button id="theme-toggle" class="theme-btn">🌙</button>
+            <h1>🦊 动漫导航站</h1>
+            <button id="theme-toggle">🌓</button>
         </header>
         
-        <div class="grid-container">
-            <!-- 链接卡片示例 -->
-            <a href="https://bgm.tv" class="card">
-                <img src="assets/icons/bangumi.png" alt="番组计划">
-                <span>番组计划</span>
-            </a>
-            <!-- 更多链接... -->
-        </div>
+        <section class="category">
+            <h2>常用网站</h2>
+            <div class="links">
+                <a href="#" class="card" style="--bg-color: #ff6b6b;">
+                    <h3>Bangumi</h3>
+                    <p>番剧索引</p>
+                </a>
+                <!-- 更多链接卡片 -->
+            </div>
+        </section>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html> 
