--- a/index.html
+++ b/index.html
@@ -3,26 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>二次元导航站</title>
+    <title>二次元导航</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>🦊 动漫导航站</h1>
-            <button id="theme-toggle">🌓</button>
+            <h1>欢迎来到二次元世界</h1>
+            <button id="theme-toggle">切换主题</button>
         </header>
-        
-        <section class="category">
-            <h2>常用网站</h2>
-            <div class="links">
-                <a href="#" class="card" style="--bg-color: #ff6b6b;">
-                    <h3>Bangumi</h3>
-                    <p>番剧索引</p>
-                </a>
-                <!-- 更多链接卡片 -->
-            </div>
-        </section>
+        <main>
+            <section class="links">
+                <!-- 这里可以添加你喜欢的网站链接 -->
+            </section>
+        </main>
     </div>
     <script src="script.js"></script>
 </body>
