--- a/index.html
+++ b/index.html
@@ -1,23 +1,73 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>二次元导航</title>
-    <link rel="stylesheet" href="style.css">
+    <title>二次元导航 | Anime Nav</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=ZCOOL+XiaoWei&display=swap" rel="stylesheet">
 </head>
-<body>
-    <div class="container">
-        <header>
-            <h1>欢迎来到二次元世界</h1>
-            <button id="theme-toggle">切换主题</button>
-        </header>
-        <main>
-            <section class="links">
-                <!-- 这里可以添加你喜欢的网站链接 -->
-            </section>
-        </main>
+<body class="dark-theme">
+    <div class="background-overlay"></div>
+    <div class="floating-settings">
+        <i class="fas fa-cog"></i>
     </div>
-    <script src="script.js"></script>
+    
+    <div class="settings-panel">
+        <div class="settings-header">
+            <h3>个性化设置</h3>
+            <i class="fas fa-times close-settings"></i>
+        </div>
+        <div class="settings-content">
+            <div class="setting-item">
+                <label>背景图片URL：</label>
+                <input type="text" id="bgInput" placeholder="输入图片URL">
+                <button id="setBg">设置背景</button>
+            </div>
+            <div class="setting-item">
+                <label>背景模糊度：</label>
+                <input type="range" id="blurRange" min="0" max="20" value="5">
+            </div>
+            <div class="setting-item">
+                <label>背景暗度：</label>
+                <input type="range" id="dimRange" min="0" max="80" value="30">
+            </div>
+        </div>
+    </div>
+    
+    <header>
+        <h1>二次元导航<span class="subtitle">AnimeNav</span></h1>
+    </header>
+
+    <main>
+        <div class="search-container">
+            <input type="text" id="search" placeholder="搜索导航...">
+        </div>
+
+        <div class="nav-container">
+            <!-- 动漫资源 -->
+            <section class="nav-section">
+                <h2>动漫资源</h2>
+                <div class="nav-grid">
+                    <a href="https://www.bilibili.com" class="nav-item" target="_blank">
+                        <img src="https://www.bilibili.com/favicon.ico" alt="bilibili">
+                        <span>哔哩哔哩</span>
+                    </a>
+                    <!-- 后续可以添加更多链接 -->
+                </div>
+            </section>
+        </div>
+    </main>
+
+    <footer>
+        <p>Made with ❤️ by <a href="https://github.com/yourusername" target="_blank">Your Name</a></p>
+    </footer>
+
+    <div class="anime-decoration">
+        <img src="https://cdn.jsdelivr.net/gh/your-username/your-repo/images/anime-char.png" alt="" class="anime-char">
+    </div>
+
+    <script src="js/script.js"></script>
 </body>
 </html> 
