--- a/index.html
+++ b/index.html
@@ -4,40 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>二次元导航 | Anime Nav</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/favicon.ico">
-    <!-- Font Awesome 图标库 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="dark-theme">
+    <div class="theme-switch">
+        <button id="themeToggle">
+            <span class="moon">🌙</span>
+            <span class="sun">☀️</span>
+        </button>
+    </div>
+    
     <header>
-        <div class="theme-switch-wrapper">
-            <label class="theme-switch" for="checkbox">
-                <input type="checkbox" id="checkbox" />
-                <div class="slider round"></div>
-            </label>
-            <em>主题切换</em>
-        </div>
+        <h1>二次元导航</h1>
+        <p class="subtitle">你的个人动漫世界</p>
     </header>
 
     <main>
-        <div class="container">
-            <h1>二次元导航<span class="subtitle">Your Anime Gateway</span></h1>
-            
-            <div class="search-box">
-                <input type="text" id="search" placeholder="搜索导航项...">
-            </div>
-
-            <div class="nav-grid">
-                <!-- 导航项将通过 JavaScript 动态添加 -->
-            </div>
-        </div>
+        <!-- 导航内容将在这里添加 -->
     </main>
 
     <footer>
-        <p>© 2024 二次元导航 | <a href="https://github.com/你的用户名/项目名" target="_blank">GitHub</a></p>
+        <p>Made with ❤️ by Anime Lovers</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html> 
