--- a/index.html
+++ b/index.html
@@ -3,36 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>私人导航 | My Nav</title>
+    <title>二次元导航</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
 <body>
-    <!-- 密码保护界面 -->
-    <div id="login-screen" class="login-container">
-        <input type="password" id="password" placeholder="输入访问密码">
-        <button onclick="checkPassword()">解锁</button>
-    </div>
-
-    <!-- 主内容 -->
-    <div id="main-content" class="hidden">
-        <!-- 头部 -->
-        <header>
-            <h1>个人导航</h1>
-            <div class="theme-switch">
-                <button onclick="toggleTheme()">🌓 切换主题</button>
-            </div>
-        </header>
-
-        <!-- 分类容器 -->
-        <div id="category-container" class="grid-container"></div>
-
-        <!-- 搜索框 -->
-        <div class="search-box">
-            <input type="text" id="search" placeholder="快速搜索...">
+    <div class="container">
+        <h1>欢迎来到我的二次元导航</h1>
+        <div class="links">
+            <a href="https://www.bilibili.com" target="_blank">哔哩哔哩</a>
+            <a href="https://www.acfun.cn" target="_blank">AcFun</a>
+            <a href="https://www.pixiv.net" target="_blank">Pixiv</a>
+            <a href="https://www.nicovideo.jp" target="_blank">Niconico</a>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html> 
