--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <!-- 看板娘动画 -->
     <div class="mascot"></div>
     
+    <!-- 樱花飘落效果 -->
+    <div id="sakura-container"></div>
+    
     <script src="script.js"></script>
 </body>
 </html> 
