--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header class="banner">
-            <h1>🦊 AnimeHome</h1>
+            <h1>AnimeHome</h1>
             <div class="search-box">
                 <input type="text" placeholder="搜索或跳转...">
                 <button>GO!</button>
