--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>AnimeHome - 你的二次元导航站</title>
+    <title>柒驿 - 二次元导航站</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <header class="banner">
-            <h1>AnimeHome</h1>
+            <h1>柒驿</h1>
             <div class="search-box">
                 <input type="text" placeholder="搜索或跳转...">
                 <button>GO!</button>
