--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             <button onclick="updateBackground()">应用</button>
         </div>
         <div class="setting-item">
-            <label>背景不透明度：</label>
-            <input type="range" id="bgOpacity" min="0" max="100" value="50">
+            <label>背景模糊度：</label>
+            <input type="range" id="bgBlur" min="0" max="20" value="5" step="1">
+            <span id="blurValue">5px</span>
         </div>
     </div>
     
