--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <!-- 樱花飘落效果 -->
     <div id="sakura-container"></div>
     
+    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 </html> 
