--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <div class="setting-item">
             <label>背景图片URL：</label>
             <input type="text" id="bgImageUrl" placeholder="输入图片链接...">
-            <button onclick="updateBackground()">应用</button>
+            <div class="button-group">
+                <button onclick="updateBackground()">应用</button>
+                <button onclick="randomBackground()">随机背景</button>
+            </div>
         </div>
         <div class="setting-item">
             <label>背景模糊度：</label>
