--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
         <div class="setting-item">
             <label>背景图片URL：</label>
             <input type="text" id="bgImageUrl" placeholder="输入图片链接...">
-            <div class="button-group">
-                <button onclick="updateBackground()">应用</button>
-                <button onclick="randomBackground()">随机背景</button>
-            </div>
+            <button onclick="updateBackground()">应用</button>
+            <button onclick="generateShareLink()" style="margin-top:10px;">生成分享链接</button>
         </div>
         <div class="setting-item">
             <label>背景模糊度：</label>
@@ -49,7 +47,6 @@
     <!-- 樱花飘落效果 -->
     <div id="sakura-container"></div>
     
-    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 </html> 
