--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <label>背景图片URL：</label>
             <input type="text" id="bgImageUrl" placeholder="输入图片链接...">
             <button onclick="updateBackground()">应用</button>
-            <button onclick="generateShareLink()" style="margin-top:10px;">生成分享链接</button>
         </div>
         <div class="setting-item">
             <label>背景模糊度：</label>
@@ -47,6 +46,7 @@
     <!-- 樱花飘落效果 -->
     <div id="sakura-container"></div>
     
+    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 </html> 
