--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
         <div class="setting-item">
             <label>背景图片URL：</label>
             <input type="text" id="bgImageUrl" placeholder="输入图片链接...">
-            <button onclick="updateBackground()">应用</button>
+            <div class="button-group">
+                <button onclick="updateBackground()">应用</button>
+                <button onclick="setAsDefault()" class="default-btn">设为默认</button>
+            </div>
         </div>
         <div class="setting-item">
             <label>背景模糊度：</label>
             <input type="range" id="bgBlur" min="0" max="20" value="5" step="1">
             <span id="blurValue">5px</span>
+        </div>
+        <div class="setting-item">
+            <button onclick="shareConfig()" class="share-btn">
+                📋 复制分享链接
+            </button>
         </div>
     </div>
     
