--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <div class="login-form">
                 <input type="text" id="username" placeholder="用户名">
                 <input type="password" id="password" placeholder="密码">
+                <div class="remember-login">
+                    <input type="checkbox" id="rememberLogin">
+                    <label for="rememberLogin">记住登录</label>
+                </div>
                 <button onclick="login()">登录</button>
             </div>
         </div>
@@ -43,6 +47,11 @@
         <div class="setting-item">
             <button onclick="shareConfig()" class="share-btn">
                 📋 复制分享链接
+            </button>
+        </div>
+        <div class="setting-item">
+            <button onclick="logout()" class="logout-btn">
+                🚪 退出登录
             </button>
         </div>
     </div>
