--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- 设置按钮 -->
-    <div class="settings-btn" onclick="toggleSettings()">
+    <div class="settings-btn">
         <span>⚙️</span>
     </div>
     
