--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         <!-- 链接管理标签页 -->
         <div class="tab-content" id="linksTab">
             <div class="setting-item">
+                <button onclick="resetToDefaultLinks()" class="reset-btn">
+                    🔄 恢复默认链接
+                </button>
+            </div>
+            <div class="setting-item">
                 <label>添加新链接：</label>
                 <select id="linkCategory">
                     <option value="">选择分类...</option>
