--- a/index.html
+++ b/index.html
@@ -90,6 +90,23 @@
     <!-- 樱花飘落效果 -->
     <div id="sakura-container"></div>
     
+    <!-- 确认对话框 -->
+    <div class="confirm-dialog" id="confirmDialog">
+        <div class="confirm-content">
+            <div class="confirm-icon">
+                <svg viewBox="0 0 24 24" width="32" height="32">
+                    <path fill="currentColor" d="M13 17h-2v-2h2v2zm0-4h-2V7h2v6zm-1-9C6.48 4 2 8.48 2 14s4.48 10 10 10 10-4.48 10-10S17.52 4 12 4zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/>
+                </svg>
+            </div>
+            <h3>确认退出</h3>
+            <p>确定要退出登录吗？</p>
+            <div class="confirm-buttons">
+                <button class="cancel-btn" onclick="hideConfirmDialog()">取消</button>
+                <button class="confirm-btn" onclick="confirmLogout()">确认退出</button>
+            </div>
+        </div>
+    </div>
+    
     <script src="config.js"></script>
     <script src="toast.js"></script>
     <script src="script.js"></script>
