--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
     </div>
     
     <div class="container">
-        <div class="search-container">
+        <header class="banner">
+            <h1>AnimeHome</h1>
             <div class="search-box">
                 <input type="text" placeholder="搜索或跳转...">
-                <button>GO!</button>
             </div>
-        </div>
+        </header>
         
         <div class="category-tags">
             <div class="category-tag active">全部工具</div>
