--- a/index.html
+++ b/index.html
@@ -15,32 +15,24 @@
     <!-- Toast通知 -->
     <div id="toastContainer"></div>
     
-    <!-- 背景设置弹窗 -->
-    <div class="settings-modal" id="bgSettingsModal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3>背景设置</h3>
-                <button class="close-btn" onclick="closeModal('bgSettingsModal')">
-                    <svg viewBox="0 0 24 24" width="20" height="20">
-                        <path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
-                    </svg>
-                </button>
+    <!-- 设置面板 -->
+    <div class="settings-panel" id="settingsPanel">
+        <div class="settings-header">
+            <h3>背景设置</h3>
+            <button class="close-btn" onclick="hideSettings()">×</button>
+        </div>
+        <div class="setting-item">
+            <label>背景图片URL：</label>
+            <input type="text" id="bgImageUrl" placeholder="输入图片链接...">
+            <div class="button-group">
+                <button onclick="updateBackground()">应用</button>
+                <button onclick="setAsDefault()" class="default-btn">设为默认</button>
             </div>
-            <div class="modal-body">
-                <div class="setting-item">
-                    <label>背景图片URL：</label>
-                    <input type="text" id="bgImageUrl" placeholder="输入图片链接...">
-                    <div class="button-group">
-                        <button onclick="updateBackground()">应用</button>
-                        <button onclick="setAsDefault()" class="default-btn">设为默认</button>
-                    </div>
-                </div>
-                <div class="setting-item">
-                    <label>背景模糊度：</label>
-                    <input type="range" id="bgBlur" min="0" max="20" value="5" step="1">
-                    <span id="blurValue">5px</span>
-                </div>
-            </div>
+        </div>
+        <div class="setting-item">
+            <label>背景模糊度：</label>
+            <input type="range" id="bgBlur" min="0" max="20" value="5" step="1">
+            <span id="blurValue">5px</span>
         </div>
     </div>
     
